adding cart to the project